[gd_scene load_steps=7 format=3 uid="uid://5uruvm1dojfh"]

[ext_resource type="Texture2D" uid="uid://xjt6eckeewuj" path="res://assets/sprites/character/base_character.png" id="1_cyrgj"]
[ext_resource type="Script" path="res://assets/objects/character/character.gd" id="1_r3qkh"]
[ext_resource type="PackedScene" uid="uid://bjjokdqvosel" path="res://assets/interface/interface.tscn" id="3_loyvj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ufr"]
atlas = ExtResource("1_cyrgj")
region = Rect2(0, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_55d2n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ufr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_oa1kb"]

[node name="Character" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)
script = ExtResource("1_r3qkh")
max_steps = 5
max_actions = 2
bag_size = 4
max_health = 20
max_mana = 10

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
shaded = true
alpha_cut = 2
texture_filter = 0
render_priority = 1
sprite_frames = SubResource("SpriteFrames_55d2n")

[node name="Outline" type="AnimatedSprite3D" parent="."]
transform = Transform3D(3.7, 0, 0, 0, 3.3, 0, 0, 0, 3, 0, 0, 0)
visible = false
modulate = Color(0, 0.364706, 0.686275, 1)
render_priority = -1
sprite_frames = SubResource("SpriteFrames_55d2n")

[node name="CollisionRay" type="RayCast3D" parent="."]
collide_with_areas = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.1, 0)
shape = SubResource("BoxShape3D_oa1kb")

[node name="Interface" parent="." instance=ExtResource("3_loyvj")]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
